--- a/02_bbc.html
+++ b/02_bbc.html
@@ -3,159 +3,94 @@
 <head>
 	<title>Technology - BBC News</title>
 	<link rel="stylesheet" type="text/css" href="navigation.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+
 </head>
 <body>
 
-<nav class="head-nav">
-	<div class="">
-		<ul class="head-nav-links">
-
-			<li class="head-nav-links-disp head-nav-links-logo ">
-				<a href="https://www.bbc.com/"><img src="images/bbc.png" width="100px" height="24px" ></a>
-			</li >
-
-			<li class="head-nav-links-disp head-nav-links-signin">
-				<a href="">Sign in</a>
-			</li>			
-
-			<li class="head-nav-links-disp">
-				<a href="https://www.bbc.com/">Home</a>
-			</li>
-			<li class="head-nav-links-disp">
-				<a href="https://www.bbc.com/news">News</a>
-			</li>
-			<li class="head-nav-links-disp">
-				<a href="https://www.bbc.com/sport">Sport</a>
-			</li>
-			<li class="head-nav-links-disp">
-				<a href="https://www.bbc.com/reel">Reel</a>
-			</li>
-			<li class="head-nav-links-disp">
-				<a href="https://www.bbc.com/worklife">Worklife</a>
-			</li>
-			<li class="head-nav-links-disp">
-				<a href="https://www.bbc.com/travel">Travel</a>
-			</li>
-			<li class="head-nav-links-disp">
-				<a href="https://www.bbc.com/future">Future</a>
-			</li>
-			<li class="head-nav-links-disp">
-				<a href="https://www.bbc.com/culture">Culture</a>
-			</li>
-			<li class="head-nav-links-disp">
-				<a href="https://www.bbc.com/culture/music">Music</a>
-			</li>
-			<li class="head-nav-links-disp">
-				<a href="https://www.bbc.co.uk/schedules/p00fzl9m">TV</a>
-			</li>
-			<li class="head-nav-links-disp">
-				<a href="https://www.bbc.com/weather">Weather</a>
-			</li>
-			<li class="head-nav-links-disp">
-				<a href="https://www.bbc.co.uk/sounds">Sounds</a>
-			</li>
-			<li class="head-nav-links-disp">
-				<a href="#orb-footer" data-alt="More" class="istats-notrack" style="null">More<span class="orb-icon orb-icon-arrow"></span></a>
-			</li>
-		</ul>
+<nav style="" class="clearfix ">
+	<div style="" class="font-family-1 head-nav-flex-container">	
+		<div class="head-nav-flex-container">
+			<img src="images/bbc.png" width="100px" height="24px" >
+		</div>
+		<div class="head-nav-flex-container">
+			<a class="head-nav-text" style="padding-right:100px;" href="" >Sign in</a>
+		</div>
+		<div class="head-nav-flex-container">
+			<a class="head-nav-text" href="https://www.bbc.com/">Home</a>
+		</div>
+		<div class="head-nav-flex-container">
+			<a class="head-nav-text" href="https://www.bbc.com/news">News</a>
+		</div>
+		<div class="head-nav-flex-container">
+			<a class="head-nav-text" href="https://www.bbc.com/sport">Sport</a>
+		</div>
+		<div class="head-nav-flex-container">
+			<a class="head-nav-text" href="https://www.bbc.com/reel">Reel</a>
+		</div>
+		<div class="head-nav-flex-container">
+			<a class="head-nav-text" href="https://www.bbc.com/worklife">Worklife</a>
+		</div>
+		<div class="head-nav-flex-container">
+			<a class="head-nav-text" href="https://www.bbc.com/travel">Travel</a>
+		</div>
+		<div class="head-nav-flex-container">
+			<a class="head-nav-text" href="https://www.bbc.com/future">Future</a>
+		</div>
+		<div class="head-nav-flex-container">
+			<a class="head-nav-text" href="https://www.bbc.com/culture">Culture</a>
+		</div>
+		<div class="head-nav-list-dropdwn head-nav-flex-container">
+			<a class="head-nav-text" href="https://www.bbc.co.uk/sounds">More</a>
+					<div class="head-nav-dropdown-content">
+					<a href="#" style="font-size:20px;">MORE</a>
+					<a href="https://www.bbc.com/culture/music">Music</a>
+				    <a href="https://www.bbc.co.uk/schedules/p00fzl9m">TV</a>
+				    <a href="https://www.bbc.com/weather">Weather</a>
+				    <a href="https://www.bbc.co.uk/sounds">Sounds</a>
+    				</div>
+		</div>
+		<div class="head-nav-list head-nav-flex-container">
+			<input style="" type="text" name="" placeholder="Search ..">
+		</div>
 	</div>
 </nav>
 
-<div class="clear-float news-branding-logo">
-	<p class="news-branding-text">NEWS</p>
+
+<div style="background-color: #bb1919; padding: 10px 6px; font-size: 30px; color:white;" class="font-family-1">
+NEWS	
 </div>
 
-<div class="head-nav-2">
-	<div class="">
-		<ul class="head-nav-links-2">
-			<li class="head-nav-links-2-disp"><a href="https://www.bbc.com/news">Home</a></li>
-			<li class="head-nav-links-2-disp"><a href="https://www.bbc.com/news">Coronavirus</a></li>
-			<li class="head-nav-links-2-disp"><a href="https://www.bbc.com/news">Video</a></li>
-			<li class="head-nav-links-2-disp"><a href="https://www.bbc.com/news">World</a></li>
-			<li class="head-nav-links-2-disp"><a href="https://www.bbc.com/news">UK</a></li>
-			<li class="head-nav-links-2-disp"><a href="https://www.bbc.com/news">Business</a></li>
-			<li class="head-nav-links-2-disp"><a href="https://www.bbc.com/news">Tech</a></li>
-			<li class="head-nav-links-2-disp"><a href="https://www.bbc.com/news">Science</a></li>
-			<li class="head-nav-links-2-disp"><a href="https://www.bbc.com/news">Stories</a></li>
-			<li class="head-nav-links-2-disp"><a href="https://www.bbc.com/news">Entertainment & Arts</a></li>
-			<li class="head-nav-links-2-disp"><a href="https://www.bbc.com/news">Health</a></li>
-			<li class="head-nav-links-2-disp"><a href="https://www.bbc.com/news">World News TV</a></li>
-			<li class="head-nav-links-2-disp"><a href="https://www.bbc.com/news">In Pictures</a></li>
-			<li class="head-nav-links-2-disp"><a href="https://www.bbc.com/news">Reality Check</a></li>
-			<li class="head-nav-links-2-disp"><a href="https://www.bbc.com/news">More</a></li>
-		</ul>
-	</div>
-</div>
-
-<div class="clear-float news-tech-logo">
-	<p class="news-branding-text-2">Tech</p>
-</div>
-
-<div class="clear-float advertisement">
-	<img class="center" src="https://tpc.googlesyndication.com/simgad/5121316353085715256?sqp=4sqPyQQ7QjkqNxABHQAAtEIgASgBMAk4A0DwkwlYAWBfcAKAAQGIAQGdAQAAgD-oAQGwAYCt4gS4AV_FAS2ynT4&rs=AOga4ql6Wio8OaOEMJSdT44qk4f0oSXxSQ">
-</div>
-
-
-
-<div class="clear-float">
-	
-	<div class="layout-6">
-		<img style="max-width: 100%; max-height: 100%;" src="https://ichef.bbci.co.uk/news/976/cpsprodpb/18299/production/_115796989_gettyimages-1028811892.jpg">
-		<div style="float:right; width:30%;">
-			<a style="font-size: 200%; "class="font" href="https://www.bbc.com/news/technology-55187611">Google staff rally behind fired AI researcher</a>
-			<p class="font"> Hundreds of Google staff have signed a letter backing a leading AI ethics researcher who was sacked by Google.<br><br>
-
-			Timnit Gebru says she was fired after sending an internal email that accused Google of "silencing marginalised voices".
-			</p>
+<div class="nav-flex-container font-family-1">
+	<div class="nav-text">Home</div>
+	<div class="nav-text">Coronavirus</div>
+	<div class="nav-text">Video</div>
+	<div class="nav-text">World</div>
+	<div class="nav-text">UK</div>
+	<div class="nav-text">Business</div>
+	<div class="nav-text">Science</div>
+	<div class="nav-text">Stories</div>
+	<div class="nav-text">Entertainment & Arts</div>
+	<div class="nav-text">World News TV</div>
+	<div class="nav-text">In Pictures</div>
+	<div class="nav-text">Reality Check</div>
+	<div class="nav-text nav-text-dropbtn">
+		<span>More</span>
+		<div class="nav-text-dropdown-content">
+			<a href="#">Newsbeat</a>
+			<a href="#">Longreads</a>
+			
 		</div>
-	</div>	
-
-	<div class="layout-8">
-		<p class=""> Layout 8 </p>
 	</div>
-
-	<div class="layout-7">
-		<img style="max-width: 100%; max-height: 100%" src="https://ichef.bbci.co.uk/news/976/cpsprodpb/6E3C/production/_115802282_gettyimages-130406392.jpg">
-		<a href="https://www.bbc.com/news/technology-55192401">Celebrity video app boss says age of A-lister is over</a>
-		<p class="font">The co-founder of Cameo, a service which allows fans to buy personal video messages from their favourite stars, says the traditional A-list celebrity is "a thing of the past".</p>
-	</div>
-
-	<div class="layout-7">
-		<img style="max-width: 100%; max-height: 100%" src="https://ichef.bbci.co.uk/news/976/cpsprodpb/1142C/production/_115800707_covid-passport.jpg">
-		<a href="https://www.bbc.com/news/technology-55187633">Tech Tent: Who wants a digital vaccine passport?</a>
-		<p class="font">In the week that the UK became the first country to approve the Pfizer/BioNTech coronavirus vaccine, there is, at last, a glimmer of hope that life around the world might to return to something like normal.</p>
-	</div>
-
-	<div class="layout-7">
-		<img style="max-width: 100%; max-height: 100%" src="https://ichef.bbci.co.uk/news/976/cpsprodpb/9EFC/production/_115800704_smic-logo.jpg">
-		<a href="https://www.bbc.com/news/technology-55187631">US turns up heat on China's biggest chip-maker</a>
-	</div>	
-
-	<div class="layout-7">
-		<img style="max-width: 100%; max-height: 100%" src="https://ichef.bbci.co.uk/news/976/cpsprodpb/653F/production/_115791952_dreamlabthumb.jpg">
-		<a href="https://www.bbc.com/news/technology-55131938">Volunteering my phone to research Covid-19 while I sleep
-</a>
-	</div>
-
-	<div class="layout-7">
-		<img style="max-width: 100%; max-height: 100%" src="https://ichef.bbci.co.uk/news/976/cpsprodpb/10890/production/_114782776_dune3.jpg">
-		<a href="https://www.bbc.com/news/business-55180055">Dune and Matrix 4 streaming plan prompts urgent talks from AMC cinemas</a>
-	</div>
-
-	<div class="layout-7">
-		<img style="max-width: 100%; max-height: 100%" src="https://ichef.bbci.co.uk/news/976/cpsprodpb/10890/production/_114782776_dune3.jpg">
-		<a href="https://www.bbc.com/news/business-55180055">Dune and Matrix 4 streaming plan prompts urgent talks from AMC cinemas</a>
 		
-	</div>
+	
 </div>
 
-<div class="clear-float empty">
-	NO TEXT IN THIS AREA
-</div>
 
-<div class="clear-float empty">
-	TEXT IN THIS AREA
-</div>
+
+
+
 
 </body>
 
